# docs/swagger.json
@@ -72,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.SignupRequest"
+                            "$ref": "#/definitions/dto.SignUpRequest"
                         }
                     }
                 ],
@@ -87,7 +87,8 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/controllers.ErrorResponse"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -676,7 +677,47 @@
                 }
             }
         },
-        "controllers.SignupRequest": {
+        "controllers.updateReq": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "fullName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.SignInReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "haidar@gmail.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "haidarpassword"
+                }
+            }
+        },
+        "dto.SignInRes": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string",
+                    "example": "xxxxxxxx..."
+                }
+            }
+        },
+        "dto.SignUpRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -706,24 +747,6 @@
                     "maxLength": 24,
                     "minLength": 3,
                     "example": "haidarIron"
-                }
-            }
-        },
-        "controllers.updateReq": {
-            "type": "object",
-            "required": [
-                "id"
-            ],
-            "properties": {
-                "fullName": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer",
-                    "minimum": 1
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         }
